<resources>
    <string name="app_name">FleetFix</string>
    <string name="fleetfix">FleetFix</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cadastro">Cadastro</string>
    <string name="repetir_senha">Repetir senha</string>
    <string name="nome_completo">Nome completo</string>
    <string name="telefone">Telefone</string>
    <string name="adicionar_veiculo">Adicionar veículo</string>
    <string name="placa">Placa</string>
    <string name="ano_fab">Ano fab.</string>
    <string name="valor_ipva">Valor IPVA</string>
    <string name="adicionar">Adicionar</string>
    <string name="veiculos">Veículos</string>
    <string name="nenhum_veiculo_cadastrado">Nenhum veículo cadastrado.</string>
    <string name="simbolo_de_adicao">Símbolo de adição</string>
    <string name="veiculo_image">Imagem do veículo</string>
    <string name="data">Data</string>
    <string name="valor">Valor</string>
    <string name="adicionar_manutencao">Adicionar manutenção</string>
    <string name="lista_de_servi_os">Lista de serviços</string>
    <string name="historico_do_veiculo">Histórico do veículo</string>
    <string name="descreva_o_problema">Descreva o problema...</string>
    <string name="descricao_do_servico">Descrição do serviço</string>
    <string name="abrir_menu">Abrir menu</string>
    <string name="fechar_menu">Fechar menu</string>
</resources>
